chore: Major codebase cleanup. 2.0.0.